<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="titleEnterScratchCard">Nhập thẻ cào</string>
    <string name="enterScratchCardNumber">Nhập số thẻ cào</string>
    <string name="enterScratchCardPinNumber">Nhập mã PIN thẻ cào</string>
    <string name="vnd">VNĐ</string>
    <string name="charge">Nạp tiền</string>
    <string name="sendPassword">Gửi mật khẩu</string>
    <string name="confirm">Xác nhận</string>
    <string name="checkTopUpHistory">Kiểm tra lịch sử Top Up</string>
    <string name="purchasedWithVWallet">(Thanh toán bằng Ví điện tử)</string>
    <string name="purchaseDialogPerMonth">(Hàng tháng)</string>
    <string name="purchaseDialogPerWeek">(Hàng tuần)</string>
    <string name="purchaseDialogPerDay">(Hàng ngày)</string>
    <string name="titleChosePackage">Lựa chọn gói</string>
    <string name="titleViettel3Gpackage">Gói ViettelTV 3G</string>
    <string name="msgPurchaseDataPacakge1">Đăng ký để xem truyền hình không giới hạn lưu lượng tốc độ cao dành cho thuê bao 3G Viettel.</string>
    <string name="msgPurchaseDataPacakge2">Gói cước tự động gia hạn khi hết chu kỳ.</string>
    <string name="buyfor1day">Mua Gói Ngày</string>
    <string name="buyfor7days">Mua Gói Tuần</string>
    <string name="buyfor30days">Mua Gói Tháng</string>
    <string name="priceOnlyOneDay">%1$s VNĐ</string>
    <string name="priceOnlyOneWeek">%1$s VNĐ</string>
    <string name="priceOnlyOneMonth">%1$s VNĐ</string>
    <string name="priceOneDay">%1$sĐ/Ngày</string>
    <string name="priceOneWeek">%1$sĐ/Tuần</string>
    <string name="priceOneMonth">%1$sĐ/Tháng</string>
    <string name="dataPurchaseConfirmMsg">Hệ thống sẽ tự động hủy gói cước cũ của dịch vụ Vietteltv (nếu có).</string>
    <string name="dataPackageCancel">Thoát</string>
    <string name="dataPackageConfirmPurchase">Mua</string>
    <string name="dataPackageConfirmCancel">Quay lại</string>
    <string name="pay_unit_day">"VNĐ/ngày"</string>
    <string name="pay_unit_days">"VNĐ/%1$dngày"</string>
    <string name="pay_unit_month">"VNĐ/tháng"</string>
    <string name="pay_unit_months">"VNĐ/%1$dtháng"</string>
    <string name="msgCannotPlayOnStb">Để sử dụng tính năng này, quý khách vui lòng mua nội dung vừa lựa chọn trên đầu thu trước.</string>
    <string name="msgLoginExpired">Lỗi. Xin hãy kiểm tra kết nối mạng của bạn và đăng nhập lại.</string>
    <string name="msgCannotPurchase">Lỗi xác thực ! Quý khách vui lòng khởi động lại ứng dụng và thử lại. (Lưu ý: Hiện tại chỉ thuê bao Viettel có thể mua được gói nội dung)</string>
    <string name="pairingExpiredTitle">Chế độ kết nối đã kết thúc.</string>
    <string name="pairingExpiredMsg">Nếu bạn muốn giữ trạng thái này, dịch vụ sẽ tự động thay đổi. Bạn có muốn kết nối lại với TV?</string>
    <string name="pairingExpiredBtn1">Kết nối với TV</string>
    <string name="pairingExpiredBtn2">Chỉ Sử dụng thiết bị</string>
    <string name="titlePackageOptions">Lựa Chọn Gói</string>
    <string name="msgPackageOptions">Để xem được nội dung này, quý khách vui lòng chọn mua 1 trong các gói sau:</string>
    <string name="bundlePrice">Giá gói combo</string>
    <string name="packagePrice">Giá gói</string>
    <string name="msgAdExit">Bạn có muốn dừng xem quảng cáo và nội dung không?</string>
    <string name="periodOndDay">Mua Gói 1 ngày</string>
    <string name="periodDays">Mua Gói %1$d ngày</string>
    <string name="txtAutoRenewal">Do not automatically renew</string>
    <string name="txtAutoRenewalState">Tự động gia hạn</string>
    <string name="txtExpired">Đã hết hạn</string>
    <string name="txtAutoRenewalMsg">Gói cước sẽ tự động gia hạn vào chu kỳ cước tiếp theo.</string>
    <string name="buyDayPackage">Mua Gói Ngày</string>
    <string name="buyWeekPackage">Mua Gói Tuần</string>
    <string name="buyMonthlyPackage">Mua Gói Tháng</string>
    <string name="buyPackage">Mua Gói </string>
    <string name="justDay">Ngày</string>
    <string name="justWeek">Tuần</string>
    <string name="justMothn">Tháng</string>
    <string name="justHour">Giờ</string>
    <string-array name="months">
        <item>Tháng 1</item>
        <item>Tháng 2</item>
        <item>Tháng 3</item>
        <item>Tháng 4</item>
        <item>Tháng 5</item>
        <item>Tháng 6</item>
        <item>Tháng 7</item>
        <item>Tháng 8</item>
        <item>Tháng 9</item>
        <item>Tháng 10</item>
        <item>Tháng 11</item>
        <item>Tháng 12</item>
    </string-array>
    <string name="forgot_pwd_title">Tìm mật khẩu</string>
    <string name="forgot_pwd_step1">Bước 1:</string>
    <string name="forgot_pwd_step2">Bước 2:</string>
    <string name="forgot_pwd_step3">Bước 3:</string>
    <string name="forgot_pwd_step1_msg">Vui lòng nhập số điện thoại của Quý khách để lấy mã xác nhận -> Bấm “Gửi”.</string>
    <string name="forgot_pwd_step2_msg">Vui lòng nhập mã xác nhận được gửi tới SMS </string>
    <string name="forgot_pwd_step3_msg">Tạo mật khẩu mới (Vui lòng ghi nhớ cho lần đăng nhập sau)</string>
    <string name="forgot_pwd_hint_phone_num">"Số điện thoại."</string>
    <string name="forgot_pwd_hint_code_num">Mã xác nhận</string>
    <string name="forgot_pwd_hint_new_pwd">Nhập mật khẩu mới</string>
    <string name="forgot_pwd_hint_confirm_pwd">Xác nhận mật khẩu mới</string>
    <string name="forgot_pwd_wrong_pwd">Mật khẩu không khớp, vui lòng nhập lại</string>
    <string name="forgot_pwd_send">"Gửi"</string>
    <string name="forgot_pwd_resend">"Gửi lại"</string>
    <string name="forgot_pwd_confirm">Hoàn thành</string>
    <string name="forgot_pwd_created">Mật khẩu đã được thay đổi</string>
    <string name="forgot_pwd_created_description">Hãy đăng nhập bằng mật khẩu bạn vừa thay đổi.</string>
    <string name="forgot_pwd_ok">OK</string>
    <string name="adplayer_skip_after">"Bỏ qua Quảng cáo sau "</string>
    <string name="adplayer_skip_sec">" giây"</string>
    <string name="adplayer_skip">Bỏ qua</string>
    <string name="episode">Tập</string>
    <string name="loading" tools:ignore="TypographyEllipsis">Đang tải...</string>
    <string name="str_hello"> Xin chào </string>
    <string name="str_btn_channel_list">Danh sách kênh</string>
    <string name="str_btn_schedule">TV Xem lại - Nhắc lịch</string>
    <string name="str_btn_cate">Thể loại</string>
    <string name="title_activity_channel">Kênh TV</string>
    <string name="str_day"> ngày </string>
    <string name="str_monday">Thứ hai,</string>
    <string name="str_tuesday">Thứ ba,</string>
    <string name="str_wednesday">Thứ tư,</string>
    <string name="str_thursday">Thứ năm,</string>
    <string name="str_friday">Thứ sáu,</string>
    <string name="str_saturday">Thứ bảy,</string>
    <string name="str_sunday">Chủ nhật,</string>
    <string name="str_yesterday"> HÔM QUA </string>
    <string name="str_day_ago"> NGÀY TRƯỚC </string>
    <string name="str_tomorrow"> NGÀY MAI </string>
    <string name="noVodAdded">Không tìm thấy VOD nào</string>
    <string name="str_day_after">  NGÀY SAU </string>
    <string name="str_noti_delete">  nội dung đã xóa</string>
    <string name="str_update">Đang cập nhật</string>
    <string name="titleCannotAccess">Không thể truy cập</string>
    <string name="messCannotAccess">Xin lỗi, danh mục bạn chọn chưa hoạt động</string>
    <string name="cannotWatchContent">Nội dung hiện không thể xem được</string>
    <string name="cannotWatchContentOnThisDevice">Nội dung hiện không thể xem được trên thiết bị của bạn</string>
    <string name="cannotWatchVTVCab">Gói cước của Quý khách chỉ hỗ trợ xem miễn phí trên WIFI, vui lòng sử dụng WIFI để xem nội dung này.</string>
    <string name="cannotWatchInvisible">Gói cước trên STB của Quý khách chưa hỗ trợ xem nội dung này. Vui lòng nâng cấp lên gói cước cao hơn để xem trên thiết bị di động. Liên hệ %s để biết thông tin chi tiết.</string>
    <string name="networkChangedWifiTo3G">Quý khách hàng vui lòng truy cập wifi để tránh phát sinh lưu lượng 3G, hoặc mua gói cước để được xem truyền hình không giới hạn lưu lượng tốc độ cao.</string>
    <string name="msgTitleDeviceLimitDialog">Vượt ngưỡng đăng nhập</string>
    <string name="msgsubTitleDeviceLimitDialog1" formatted="false">Tài khoản %s của bạn đã đăng nhập quá %d màn hình đồng thời</string>
    <string name="msgsubTitleDeviceLimitDialog2">Để tiếp tục sử dụng, vui lòng đăng xuất \n khỏi thiết bị trước đó. Bạn có muốn chọn \n thiết bị để đăng xuất không?</string>
    <string name="titleSelectDeviceToLogout">Lựa chọn thiết bị để đăng xuất</string>
    <string name="descriptionSelectDeviceToLogout"> Vui lòng chọn 1 hoặc nhiều thiết bị \n bên dưới để đăng xuất</string>
    <string name="noticeDeviceLogout">Bạn đã bị đăng xuất do mật khẩu bị thay đổi hoặc vượt quá giới hạn tài khoản đăng nhập đồng thời vào các thiết bị khác nhau. Bạn có muốn đăng nhập lại không ?</string>
    <string name="msgPhoneNumber">Số điện thoại</string>
    <string name="msgPassword">Mật khẩu</string>
    <string name="msgForgotPassword">Quên mật khẩu</string>
    <string name="msgsubTitleSignUpOne">Nhập số điện thoại để nhận mã xác thực</string>
    <string name="msgsubTitleSignUpTwo">Sử dụng mã xác thực nhận được để tạo tài khoản mới</string>
    <string name="msgsubTitleFindPassTwo">Sử dụng mã xác thực nhận được để đổi mật khẩu</string>
    <string name="msgsubTitleSignUpThree">Mật khẩu</string>
    <string name="msgReLogin">Đăng nhập lại</string>
    <string name="msgSignupRightConfirmPassword">Mật khẩu hợp lệ</string>
    <string name="msgSignupHintSMSError">Mã xác thực không đúng, vui long kiểm tra lại</string>
    <string name="font_B">B</string>
    <string name="font_M">M</string>
    <string name="font_Roboto">Roboto</string>
    <string name="font_REB">REB</string>
    <string name="font_RL">RL</string>
    <string name="cancel">"Hủy"</string>
    <string name="ok">"Đồng ý"</string>
    <string name="yes">"Có"</string>
    <string name="purchase">"Mua"</string>
    <string name="agree">"Đồng ý"</string>
    <string name="updatePackageTitle">"Nâng cấp gói"</string>
    <string name="alert">"Thông báo"</string>
    <string name="purchase_hot_line">Tổng đài hỗ trợ: %s</string>
    <string name="warning">Cảnh báo</string>
    <string name="warningDes">Quý khách đã dùng cho các dịch vụ nội dung vượt quá # VNĐ trong tháng.\n</string>
    <string name="warning1">Trang chủ>Danh sách mua</string>
    <string name="warning2">Trang chủ>Cài đặt>Kích hoạt mật khẩu</string>
    <string name="warningDesc">Để được sử dụng mật khẩu khi mua</string>
    <string name="warningBtnDes">Quý khách xác nhận muốn tiếp tục mua nội dung?</string>
    <string name="warningCheck">Không hiển thị lại thông báo này</string>
    <string name="reConfirmTitle">Xác nhận thanh toán</string>
    <string name="reConfirmSubTitle">Quý khách có chắc chắn mua?</string>
    <string name="out_of_money_message">Tài khoản trong ví điện tử của bạn không đủ.\nBạn có muốn nạp thêm tiền vào ví ?</string>
    <string name="confirmChargeWallet">Nạp thêm tiền vào tài khoản</string>
    <string name="settingChargeAccountDes">Vui lòng lựa chọn phương thức thanh toán phù hợp</string>
    <string name="settingChargeAccountPhoneTitle">Tài khoản điện thoại</string>
    <string name="settingChargeAccountPhoneDes">Chỉ áp dụng cho thuê bao Viettel</string>
    <string name="settingChargeAccountVWalletTitle">Ví điện tử</string>
    <string name="settingChargeAccountVWalletDes">Áp dụng cho cả tất cả các thuê bao</string>
    <string name="not_viettel_sub_titl">"Purchase is not available"</string>
    <string name="not_viettel_sub_description">"Package Purchase is only available for Viettel 3G mobile subscribers"</string>
    <string name="not_viettel_sub_guide_title">"Please get more help from below"</string>
    <string name="not_viettel_sub_hotline">"Hotline 19008198 (200 VND/min)"</string>
    <string name="not_viettel_sub_website">"Website: http://vietteltelecom.vn/"</string>
</resources>