<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="290dp"
    android:layout_height="wrap_content"
    android:background="@drawable/round_login_popup"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="18dp"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="18dp"
    tools:ignore="SmallSp,ContentDescription,RtlHardCoded" >

    <com.alticast.viettelottcommons.widget.FontTextView
        app:font="@string/font_M"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="17dp"
        android:singleLine="false"
        android:text="@string/warning"
        android:textColor="#E1E1E1"
        android:textSize="18.3dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="#17ffffff" />

    <com.alticast.viettelottcommons.widget.FontTextView
        app:font="@string/font_M"
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:singleLine="false"
        android:textColor="#b4b4b4"
        android:textSize="12dp"
        tools:text="@string/warningDes" />

    <com.alticast.viettelottcommons.widget.FontTextView
        app:font="@string/font_M"
        android:id="@+id/message2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/warning1"
        android:textColor="#FFCC05"
        android:textSize="12dp"
        android:visibility="gone"
        tools:text="@string/warning1" />

    <com.alticast.viettelottcommons.widget.FontTextView
        app:font="@string/font_M"
        android:id="@+id/message3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/warningDesc"
        android:visibility="gone"
        android:textColor="#b4b4b4"
        android:textSize="12dp"
        tools:text="@string/warningDesc" />

    <com.alticast.viettelottcommons.widget.FontTextView
        app:font="@string/font_M"
        android:id="@+id/message4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:singleLine="false"
        android:visibility="gone"
        android:text="@string/warning2"
        android:textColor="#FFCC05"
        android:textSize="12dp"
        tools:text="@string/warning2" />

    <com.alticast.viettelottcommons.widget.FontTextView
        app:font="@string/font_M"
        android:id="@+id/message5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/warningBtnDes"
        android:textColor="#b4b4b4"
        android:textSize="12dp"
        tools:text="@string/warningBtnDes" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="11dp" />

    <com.alticast.viettelottcommons.widget.FontButtonView
        app:font="@string/font_M"
        android:id="@+id/btnPurchase"
        style="@style/Widget.Viettel.Button"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/purchase"
        android:textSize="14sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <com.alticast.viettelottcommons.widget.FontButtonView
        app:font="@string/font_M"
        android:id="@+id/btnCancel"
        style="@style/Widget.Viettel.Button"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/cancel"
        android:textSize="14sp" />


    <com.alticast.viettelottcommons.widget.FontCheckBox
        app:font="@string/font_M"
        android:id="@+id/again_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:button="@drawable/btn_pop_warning_check"
        android:text="@string/warningCheck"
        android:textSize="11.3dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:textStyle="italic" />

</LinearLayout>