<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:background="@color/bg_dialog"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:ignore="SmallSp,ContentDescription,RtlHardCoded">

    <com.alticast.viettelottcommons.widget.FontTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/not_viettel_sub_titl"
        android:textColor="#FFFFFFFF"
        android:textSize="20sp"
        app:font="@string/font_REB" />

    <ImageView
        android:id="@+id/imv_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:src="@drawable/popup_title_line" />

    <com.alticast.viettelottcommons.widget.FontTextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imv_line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ellipsize="end"
        android:fadeScrollbars="false"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:text="@string/not_viettel_sub_description"
        android:textColor="#99FFFFFF"
        android:textSize="14sp"
        app:font="@string/font_RL" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/drawable_border_wallet_normal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <com.alticast.viettelottcommons.widget.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/not_viettel_sub_guide_title"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp"
            app:font="@string/font_REB" />

        <com.alticast.viettelottcommons.widget.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/not_viettel_sub_hotline"
            android:textColor="#99FFFFFF"
            android:textSize="10sp"
            app:font="@string/font_RL" />

        <com.alticast.viettelottcommons.widget.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:text="@string/not_viettel_sub_website"
            android:textColor="#99FFFFFF"
            android:textSize="10sp"
            app:font="@string/font_RL" />
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#99FFFFFF"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        />

    <com.alticast.viettelottcommons.widget.FontButtonView
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:background="@drawable/selector_btn_normal"
        android:text="@string/ok"
        android:textColor="@color/selector_text_button_normal"
        android:textSize="15sp"
        app:font="@string/font_B" />
</LinearLayout>
