<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="290dp"
    android:layout_height="wrap_content"
    android:background="@drawable/round_login_popup"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="18dp"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="18dp"
    tools:ignore="SmallSp,ContentDescription,RtlHardCoded" >

    <com.alticast.viettelottcommons.widget.FontTextView
        app:fontTextView="@string/font_M"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reConfirmTitle"
        android:textColor="#FFE1E1E1"
        android:textSize="18.3dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="#17ffffff" />

    <com.alticast.viettelottcommons.widget.FontTextView
        app:fontTextView="@string/font_M"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/reConfirmSubTitle"
        android:textColor="#FFB4B4B4"
        android:textSize="12dp" />

    <com.alticast.viettelottcommons.widget.FontButtonView
        app:fontTextView="@string/font_M"
        android:id="@+id/yes_button"
        style="@style/Widget.Viettel.Button"
        android:layout_width="match_parent"
        android:layout_height="34.6dp"
        android:text="@string/yes"
        android:textSize="13sp" />

    <com.alticast.viettelottcommons.widget.FontButtonView
        app:fontTextView="@string/font_M"
        android:id="@+id/cancel_button"
        style="@style/Widget.Viettel.Button"
        android:layout_width="match_parent"
        android:layout_height="34.6dp"
        android:layout_marginTop="5dp"
        android:text="@string/cancel"
        android:textSize="13sp" />

    <com.alticast.viettelottcommons.widget.FontTextView
        app:fontTextView="@string/font_M"
        android:id="@+id/hot_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:textColor="#858585"
        android:textSize="12sp"
        tools:text="@string/purchase_hot_line" />

</LinearLayout>