<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">
    <com.alticast.viettelottcommons.widget.FontTextView
        style="@style/Wallet.PackageName"
        app:font="@string/font_Roboto"
        android:text="@string/settingChargeAccountDes" />

    <LinearLayout
        android:id="@+id/layoutChargePhone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/mediumMargin"
        android:background="@drawable/drawable_border_charge_account"
        android:paddingLeft="15dp">

        <com.alticast.viettelottcommons.widget.FontCheckBox
            android:id="@+id/checkIdPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:button="@drawable/selector_radio_button"
            android:clickable="false"
            android:duplicateParentState="true"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <com.alticast.viettelottcommons.widget.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:duplicateParentState="true"
                android:gravity="center_vertical"
                android:text="@string/settingChargeAccountPhoneTitle"
                android:textColor="#ffffffff"
                android:textSize="15sp"
                app:font="@string/font_B" />
            <com.alticast.viettelottcommons.widget.FontTextView
                style="@style/Wallet.SectionDescription"
                android:text="@string/settingChargeAccountPhoneDes"
                android:textColor="@color/bonus_color"
                app:font="@string/font_M" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutChargeVWallet"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/mediumMargin"
        android:background="@drawable/drawable_border_charge_account"
        android:paddingLeft="15dp">

        <com.alticast.viettelottcommons.widget.FontCheckBox
            android:id="@+id/checkIdVWallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:button="@drawable/selector_radio_button"
            android:clickable="false"
            android:duplicateParentState="true"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <com.alticast.viettelottcommons.widget.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:duplicateParentState="true"
                android:gravity="center_vertical"
                android:text="@string/settingChargeAccountVWalletTitle"
                android:textColor="#ffffffff"
                android:textSize="15sp"
                app:font="@string/font_B" />
            <com.alticast.viettelottcommons.widget.FontTextView
                style="@style/Wallet.SectionDescription"
                android:text="@string/settingChargeAccountVWalletDes"
                android:textColor="@color/bonus_color"
                app:font="@string/font_M" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>